# psx-doom-fire-opengl

./: CMakeLists.txt  notes.txt
doom-fire/: CMakeLists.txt  main.c
libs/glfw-3.3.4/docs/: Doxyfile.in
shader/: frag.glsl  vert.glsl
src/: CMakeLists.txt  main.c
